--- a/index.html
+++ b/index.html
@@ -102,9 +102,14 @@
 
         footer {
 
+            border: 4px solid;
+            margin: ;
             text-align: center;
-            padding-bottom: 30px;
-            background-color: bisque
+            padding-bottom: 30px center;
+            background-color: bisque;
+            width: 345px ceter;
+
+
         }
 
         div {
